--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,19 +32,21 @@ jobs:
 
       - id: changed-files
         uses: tj-actions/changed-files@v3.0.2
+        with:
+          files: chinese-holidays.ics
 
-      - if: steps.changed-files.outputs.any_changed == 'true'
+      - if: steps.changed-files.outputs.any_modified == 'true'
         id: date
         run: echo "::set-output name=date::$(date +%Y%m%d%H%M%S)"
 
-      - if: steps.changed-files.outputs.any_changed == 'true'
+      - if: steps.changed-files.outputs.any_modified == 'true'
         run: |
           git config user.name 'github-actions[bot]'
           git config user.email '41898282+github-actions[bot]@users.noreply.github.com'
           git add -A
           git commit -am "build: github action auto build at ${{ steps.diff.outputs.date }}"
 
-      - if: steps.changed-files.outputs.any_changed == 'true'
+      - if: steps.changed-files.outputs.any_modified == 'true'
         uses: peter-evans/create-pull-request@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
