--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,8 +14,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-        with:
-          fetch-depth: 2
 
       - uses: pnpm/action-setup@v2.0.1
         with:
@@ -31,22 +29,22 @@ jobs:
       - run: pnpm run build
 
       - id: changed-files
-        uses: tj-actions/changed-files@v3.0.2
+        uses: tj-actions/verify-changed-files@v8.8
         with:
           files: chinese-holidays.ics
 
-      - if: steps.changed-files.outputs.any_modified == 'true'
+      - if: steps.changed-files.outputs.files_changed == 'true'
         id: date
         run: echo "::set-output name=date::$(date +%Y%m%d%H%M%S)"
 
-      - if: steps.changed-files.outputs.any_modified == 'true'
+      - if: steps.changed-files.outputs.files_changed == 'true'
         run: |
           git config user.name 'github-actions[bot]'
           git config user.email '41898282+github-actions[bot]@users.noreply.github.com'
           git add -A
           git commit -am "build: github action auto build at ${{ steps.diff.outputs.date }}"
 
-      - if: steps.changed-files.outputs.any_modified == 'true'
+      - if: steps.changed-files.outputs.files_changed == 'true'
         uses: peter-evans/create-pull-request@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
