--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
 
       - run: pnpm install
 
-      - run: pnpm run build
+      - run: node .
 
       - id: changed-files
         uses: tj-actions/verify-changed-files@v8.8
